--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^6.10.14",
+    "@nestjs/config": "^0.1.0",
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/swagger": "^4.2.0",
     "@nestjs/typeorm": "^6.2.0",
     "axios": "^0.19.0",
     "class-transformer": "^0.2.3",
+    "crypto-js": "^3.1.9-1",
+    "minter-js-sdk": "^0.26.1",
+    "minterjs-wallet": "^4.0.4",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -38,6 +42,7 @@
     "@nestjs/cli": "^6.13.2",
     "@nestjs/schematics": "^6.8.1",
     "@nestjs/testing": "^6.10.14",
+    "@types/crypto-js": "^3.1.43",
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.25",
     "@types/node": "^13.1.6",
