--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.2.3",
     "crypto-js": "^3.1.9-1",
     "crypto-random-string": "^3.1.0",
+    "hbs": "^4.1.0",
     "minter-js-sdk": "^0.26.1",
     "minterjs-wallet": "^4.0.4",
     "mysql": "^2.18.1",
